# Probabilidad-de-Descenso

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CalculadorEscenariosdeDescenso.ipynb  LICENSE  README.md  detailed_probs.json  probabilidad_descenso.py  probs.csv  pyproject.toml
data/: fixtures.json  teams.json
notebooks/: Prob_Des_Total_1RFEF.ipynb
schemas/: fixtures.schema.json  teams.schema.json
scripts/: benchmark_convergence.py  utilidad_estimacion.py
tests/: test_api_integration.py  test_distributions.py  test_tiebreak.py
